# WebViewToolkit

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json
.github/workflows/: cicd.yml
Runtime/: WebViewCore.cs
Runtime/Native/: WebViewNative.cs
Runtime/UIToolkit/Demo/: WebViewDemo.uss
Samples~/01_HelloWebView/Scripts/: HelloWebViewController.cs
Samples~/01_HelloWebView/UI/: HelloWebView.uss  HelloWebView.uxml
Samples~/02_Navigation/UI/: Navigation.uss
Samples~/03_JavaScriptBridge/: README.md
Samples~/03_JavaScriptBridge/Scripts/: JavaScriptBridgeController.cs
Samples~/04_DynamicHTML/: README.md
Samples~/04_DynamicHTML/Scripts/: DynamicHTMLController.cs
Samples~/05_InteractiveInput/: InteractiveInput.unity  InteractiveInputPanelSettings.asset  README.md
Samples~/05_InteractiveInput/Scripts/: InteractiveInputController.cs
Samples~/05_InteractiveInput/UI/: InteractiveInput.uxml
Samples~/06_MultipleWebViews/: MultipleWebViews.unity
Samples~/06_MultipleWebViews/UI/: MultipleWebViews.uxml
Tests/Editor/: WebViewManagerTests.cs
WebViewToolkit/: LICENSE  README.md  package.json
WebViewToolkit/Editor/: FixWebViewScene.cs
WebViewToolkit/Runtime/: WebViewInstance.cs  WebViewManager.cs  WebViewToolkit.Runtime.asmdef
WebViewToolkit/Runtime/Components/: WebViewBehaviour.cs
WebViewToolkit/Runtime/UIToolkit/: WebViewElement.cs  WebViewPanel.cs  WebViewToolkit.UIToolkit.asmdef
WebViewToolkit/Runtime/UIToolkit/Demo/: WebViewDemo.uxml  WebViewPanelDemo.cs
WebViewToolkit/Samples~/: README.md
WebViewToolkit/Samples~/01_HelloWebView/: README.md
WebViewToolkit/Samples~/02_Navigation/: README.md
WebViewToolkit/Samples~/02_Navigation/Scripts/: NavigationController.cs
WebViewToolkit/Samples~/02_Navigation/UI/: Navigation.uxml
WebViewToolkit/Samples~/03_JavaScriptBridge/Scripts/: GameState.cs
WebViewToolkit/Samples~/03_JavaScriptBridge/UI/: JavaScriptBridge.uss  JavaScriptBridge.uxml
WebViewToolkit/Samples~/04_DynamicHTML/Scripts/: HTMLTemplates.cs  InventoryData.cs
WebViewToolkit/Samples~/04_DynamicHTML/UI/: DynamicHTML.uss  DynamicHTML.uxml
WebViewToolkit/Samples~/05_InteractiveInput/UI/: InteractiveInput.uss
WebViewToolkit/Samples~/06_MultipleWebViews/: README.md
WebViewToolkit/Samples~/06_MultipleWebViews/Scripts/: MultipleWebViewsController.cs
WebViewToolkit/Samples~/06_MultipleWebViews/UI/: MultipleWebViews.uss
WebViewToolkit/Tests/Editor/: WebViewElementTests.cs  WebViewToolkit.Tests.Editor.asmdef
WebViewToolkit/Tests/Runtime/: WebViewIntegrationTests.cs  WebViewToolkit.Tests.Runtime.asmdef
WebViewToolkitPlugin/: Build.ps1  CMakeLists.txt  CMakePresets.json  Setup.ps1  vcpkg.json
WebViewToolkitPlugin/include/WebViewToolkit/: Plugin.h  RenderAPI.h  Types.h  WebView.h  WebViewCapture.h  WebViewManager.h
WebViewToolkitPlugin/src/: Plugin.cpp  PluginExports.cpp  WebView.cpp  WebViewCapture.cpp  WebViewManager.cpp  WebViewToolkit.def
WebViewToolkitPlugin/src/RenderAPI/: DebugLog.h  RenderAPI.cpp  RenderAPI_D3D11.cpp  RenderAPI_D3D11.h  RenderAPI_D3D12.cpp  RenderAPI_D3D12.h
